feat: royal dark Doraemon theme + live screenshots in README
PAGES REDESIGNED:
- WelcomeScreen: full Doraemon body, night sky, stars, gold shimmer, shooting stars
- LoginPage: glassmorphism card, Doraemon head glow avatar, show/hide password
- SignupPage: avatar selector (boy/girl/legend), pink gradient, age slider
- ModeSelection: dark dashboard, hover glow mode cards, stats header, badge row
- LearningMode: cosmic canvas bg, royal right panel, glow letter, gradient nav
- ParentDashboard: stat cards with colored glow, gradient progress bars, dark SVG chart

COMPONENTS:
- Copyright.jsx: fixed c-Vishisht footer badge on every page
- api.js: offline-first auth fallback (localStorage when backend down)

README:
- Updated with 6 live screenshots (welcome/login/signup/dashboard/learning/parent)
- Feature table, tech stack, OCR pipeline, hand gestures, design tokens, project structure